--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Keywords go here">
     <meta name="description" content="Description goes here.">
     <link href="https://file.myfontastic.com/E7GPFQRMh7piUpU4b5pRnm/icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/styles/styles-ae439a1bdf.css"/>
+    <link rel="stylesheet" href="./assets/styles/styles-ae439a1bdf.css"/>
 </head>
 
 <body>
@@ -158,7 +158,7 @@
         </div>
     </div>
 
-    <script src="/assets/scripts/App-b3e6acf973.js"></script>
+    <script src="./assets/scripts/App-b3e6acf973.js"></script>
 </body>
 
 </html>
